--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
     </nav>
     <nav id="hamburger-nav">
-      <div class="logo">Chandrahash Kumar</div>
+      <div class="logo">Portfolio</div>
       <div class="hamburger-menu">
         <div class="hamburger-icon" onclick="toggleMenu()">
           <span></span>
@@ -55,7 +55,7 @@
             class="btn btn-color-2"
             onclick="window.open('./assets/resume.pdf')"
           >
-            Download CV
+            Download Resume
           </button>
           <button class="btn btn-color-1" onclick="location.href='./#contact'">
             Contact Info
