--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/profile-pic.png" alt="John Doe profile picture" />
+        <img src="./assets/profile-pic.png" alt="Chandrahash Kumar profile picture" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
@@ -262,7 +262,6 @@
       />
     </section>
     -->
-    <!--
     <section id="projects">
       <p class="section__text__p1">Browse My Recent</p>
       <h1 class="title">Projects</h1>
@@ -292,6 +291,7 @@
               </button>
             </div>
           </div>
+          <!--
           <div class="details-container color-container">
             <div class="article-container">
               <img
