--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container">
-            <h2 class="experience-sub-title">Artificial Intelligence and Machine Learning</h2>
+            <h2 class="experience-sub-title">Python Development</h2>
             <div class="article-container">
               <article>
                 <img
