--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
                 />
                 <div>
                   <h3>Python</h3>
+                  <p>Experienced</p>
                 </div>
               </article>
             </div>
