--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Python</h3>
-                  <p>Experienced</p>
+                  <h3>Data Science & AI Innovation</h3>
+                  <p></p>
                 </div>
               </article>
             </div>
