--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             </div>
           </div>
           <div class="details-container">
-            <h2 class="experience-sub-title">AI & ML</h2>
+            <h2 class="experience-sub-title">AI & ML (Future Experience)</h2>
             <div class="article-container">
               <article>
                 <img
@@ -155,8 +155,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Data Science & AI Innovation</h3>
-                  <p>  </p>
+                  <h3>Artificial Intelligence Engineer</h3>
+                  <p></p>
                 </div>
               </article>
             </div>
