education details update

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>12th, <br />B.Tech in Computer Science and Engineering with a specialization in Artificial Intelligence and Machine Learning
+              <p>12th, <br />Bachelor of Technology in Computer Science and Engineering with a specialization in Artificial Intelligence and Machine Learning
                 Bachelor's Degree, in Progress</p>
             </div>
           </div>
