--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           >
             Download Resume
           </button>
-          <button class="btn btn-color-1" onclick="location.href='./#contact'">
+          <button class="btn btn-color-1" onclick="window.location.href='./#contact'">
             Contact Info
           </button>
         </div>
@@ -66,13 +66,13 @@
             src="./assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='https://www.linkedin.com/in/chandrahashkumar/'"
+            onclick="window.location.href='https://www.linkedin.com/in/chandrahashkumar/'"
           />
           <img
             src="./assets/github.png"
             alt="My Github profile"
             class="icon"
-            onclick="location.href='https://github.com/chandrahashkumar'"
+            onclick="window.location.href='https://github.com/chandrahashkumar'"
           />
         </div>
       </div>
@@ -97,7 +97,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>1+ years <br />Python Developer</p>
+              <p>2+ years <br />Python Developer</p>
             </div>
             <div class="details-container">
               <img
@@ -242,7 +242,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:examplemail@gmail.com">chandrahashkumar256@outlook.com</a></p>
+          <p><a href="mailto:examplemail@gmail.com">chandrahashkumar256@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
@@ -265,7 +265,7 @@
           </ul>
         </div>
       </nav>
-      <p>Copyright &#169; 2025 Chandrahash Kumar. All Rights Reserved.</p>
+      <p>&#169; 2025 Chandrahash Kumar. All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
   </body>
