--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <nav id="desktop-nav">
-      <div class="logo">Chandrahash</div>
+      <div class="logo"><a href="index.html" class="logo">Chandrahash</a></div>
       <div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
