--- a/gallery.html
+++ b/gallery.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gallery - Chandrahash Kumar</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css" />
     <style>
       /* GALLERY SECTION */
       #gallery {
@@ -43,11 +44,17 @@
           width: 90%;
         }
       }
+
+      .logo a {
+        text-decoration: none; /* Remove underline */
+        color: #ffffff; /* Ensure the color is visible */
+        font-weight: bold; /* Optional: Make it bold */
+      }
     </style>
   </head>
   <body>
     <nav id="desktop-nav">
-      <div class="logo">Chandrahash</div>
+      <div class="logo"><a href="index.html" class="logo">Chandrahash</a></div>
       <div>
         <ul class="nav-links">
           <li><a href="index.html#about">About</a></li>
