--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
     </script>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
+    <style>
+      .logo {
+        color: #000; /* Change to black or any visible color */
+        text-decoration: none; /* Remove underline if it's a link */
+        font-weight: bold; /* Optional: Make it bold */
+      }
+      .logo a {
+        text-decoration: none; /* Remove underline */
+        color: #ffffff; /* Ensure the color is visible */
+        font-weight: bold; /* Optional: Make it bold */
+      }
+    </style>
   </head>
   <body>
     <nav id="desktop-nav">
