--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
               >
                 Github
               </button>
-              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/chandrahashkumar/Weather_App.git'">
                 Live Demo
               </button>
             </div>
