update live chatbot link

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
               <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/chandrahashkumar/restaurant_chatbot.git'">
                 Github
               </button>
-              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/chandrahashkumar/restaurant_chatbot.git'">
                 Live Demo
               </button>
             </div>
