--- a/gallery.html
+++ b/gallery.html
@@ -31,6 +31,23 @@
         height: auto;
         border-radius: 10px;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        transition: transform 0.2s cubic-bezier(0.4, 0, 0.2, 1),
+                    box-shadow 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+        cursor: pointer;
+        backface-visibility: hidden;
+        will-change: transform, box-shadow;
+        -webkit-font-smoothing: antialiased;
+      }
+
+      .gallery-img:active {
+        transform: translateY(2px) scale(0.97);
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
+        transition-duration: 0.1s;
+      }
+
+      .gallery-img:hover {
+        transform: translateY(-5px) scale(1.03);
+        box-shadow: 0 12px 20px rgba(0, 0, 0, 0.15);
       }
 
       .gallery-caption {
