--- a/index.html
+++ b/index.html
@@ -201,12 +201,36 @@
       <div class="contact-info-upper-container">
         <div class="contact-info-container">
           <img src="./assets/email.png" alt="Email icon" class="icon contact-icon email-icon" />
-          <p><a href="mailto:examplemail@gmail.com">chandrahashkumar256@gmail.com</a></p>
+          <p><a href="mailto:chandrahashkumar256@gmail.com">chandrahashkumar256@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img src="./assets/linkedin.png" alt="LinkedIn icon" class="icon contact-icon" />
           <p><a href="https://www.linkedin.com/in/chandrahashkumar/">LinkedIn</a></p>
         </div>
+      </div>
+      
+      <!-- Add contact form -->
+      <div class="contact-form-container">
+        <form id="contact-form" action="#" method="POST">
+          <div class="form-group">
+            <input type="text" id="name" name="name" placeholder="Your Name" required>
+          </div>
+          <div class="form-group">
+            <input type="email" 
+                   id="email" 
+                   name="email" 
+                   placeholder="Your Email" 
+                   required>
+            <span class="error-message" id="email-error"></span>
+          </div>
+          <div class="form-group">
+            <input type="tel" id="phone" name="phone" placeholder="Your Phone Number">
+          </div>
+          <div class="form-group">
+            <textarea id="message" name="message" placeholder="Your Message" rows="5" required></textarea>
+          </div>
+          <button type="submit" class="btn btn-color-2">Send Message</button>
+        </form>
       </div>
     </section>
     <footer>
@@ -225,3 +249,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+``` 
