--- a/index.html
+++ b/index.html
@@ -213,21 +213,35 @@
       <div class="contact-form-container">
         <form id="contact-form" action="#" method="POST">
           <div class="form-group">
-            <input type="text" id="name" name="name" placeholder="Your Name" required>
+            <input type="text" 
+                   id="name" 
+                   name="name" 
+                   placeholder="Your Name" 
+                   class="input-large"
+                   required>
           </div>
           <div class="form-group">
             <input type="email" 
                    id="email" 
                    name="email" 
                    placeholder="Your Email" 
+                   class="input-large"
                    required>
             <span class="error-message" id="email-error"></span>
           </div>
           <div class="form-group">
-            <input type="tel" id="phone" name="phone" placeholder="Your Phone Number">
+            <input type="tel" 
+                   id="phone" 
+                   name="phone" 
+                   placeholder="Your Phone Number"
+                   class="input-large">
           </div>
           <div class="form-group">
-            <textarea id="message" name="message" placeholder="Your Message" rows="5" required></textarea>
+            <textarea id="message" 
+                     name="message" 
+                     placeholder="Your Message" 
+                     class="textarea-large" 
+                     rows="8"></textarea>
           </div>
           <button type="submit" class="btn btn-color-2">Send Message</button>
         </form>
@@ -249,4 +263,3 @@
     <script src="script.js"></script>
   </body>
 </html>
-``` 
