--- a/index.html
+++ b/index.html
@@ -211,6 +211,9 @@
       
       <!-- Add contact form -->
       <div class="contact-form-container">
+        <div id="success-message" class="message success-message hidden">
+          Message sent successfully!
+        </div>
         <form id="contact-form" action="#" method="POST">
           <div class="form-group">
             <input type="text" 
